--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<head>
+<header>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="xBT4GhYoi5qRD5tr338pgPM5OWHHIDR6mNg1a3euekI" />
@@ -52,5 +52,5 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
-</head>
+</header>
 
